# lee2024

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lee2024/: __init__.py  registry.py
src/lee2024/data/: recording.py
src/lee2024/io/: readmatlab.py
src/lee2024/processing/: stimavg.py
tests/: conftest.py  test_pkg_structure.py  test_readmatlab.py  test_registry.py
